# rules_rs

./: MODULE.bazel  README.md
rs/: extensions.bzl  rust_crate.bzl
rs/private/: BUILD.bazel  cargo_workspace_graph.bzl  cargo_workspace_graph_test.bzl  git_cargo_workspace_repository.bzl  host_tools_repository.bzl  repository_utils.bzl  rustc_repository.bzl  rustc_src_repository.bzl  source_stdlib.bzl
rs/toolchains/: BUILD.bazel  declare_rustc_toolchains.bzl  module_extension.bzl
test/: BUILD.bazel  MODULE.bazel  rules_cc-external-include-paths.patch  shared_hub_test.rs  systemd-external-include-paths.patch
test/shared_hub/: Cargo.toml
test/shared_hub/logger/: BUILD.bazel  Cargo.toml
test/shared_hub/logger/src/: lib.rs
test/shared_hub_child/: BUILD.bazel  Cargo.toml  MODULE.bazel
test/shared_hub_child/src/: lib.rs
