bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "llvm", version = "0.8.3")
bazel_dep(name = "apple_support", version = "1.24.2")

# SBOM
bazel_dep(name = "package_metadata", version = "0.0.7")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "supply-chain-go", version = "0.0.7")
bazel_dep(name = "supply_chain_tools", version = "0.0.1")

git_override(
    module_name = "package_metadata",
    commit = "15dad57b95f15c6595ce4ebd1133f258e91b7cf6",
    remote = "https://github.com/bazel-contrib/supply-chain",
    strip_prefix = "metadata",
)

git_override(
    module_name = "rules_license",
    commit = "15dad57b95f15c6595ce4ebd1133f258e91b7cf6",
    remote = "https://github.com/bazel-contrib/supply-chain",
    strip_prefix = "rules_license",
)

git_override(
    module_name = "supply-chain-go",
    commit = "15dad57b95f15c6595ce4ebd1133f258e91b7cf6",
    remote = "https://github.com/bazel-contrib/supply-chain",
    strip_prefix = "lib/supplychain-go",
)

git_override(
    module_name = "supply_chain_tools",
    commit = "15dad57b95f15c6595ce4ebd1133f258e91b7cf6",
    remote = "https://github.com/bazel-contrib/supply-chain",
    strip_prefix = "tools",
)

osx = use_extension("@llvm//extensions:osx.bzl", "osx")
osx.frameworks(names = [
    "AudioToolbox",
    "AudioUnit",
    "CFNetwork",
    "CoreAudio",
    "CoreAudioTypes",
    "CoreFoundation",
    "CoreMIDI",
    "CoreServices",
    "DiskArbitration",
    "Foundation",
    "IOKit",
    "Kernel",
    "OSLog",
    "OpenAL",
    "Security",
    "SystemConfiguration",
])
use_repo(osx, "macos_sdk")

#local_path_override(
#    module_name = "llvm",
#    path = "../toolchains_llvm_bootstrapped",
#)

register_toolchains("@llvm//toolchain:all")

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "protobuf", version = "34.0.bcr.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.18")
single_version_override(
    module_name = "rules_cc",
    patch_strip = 1,
    # Remove after a rules_cc release contains c622263994ed44b549f563d50e767132baa35953.
    patches = ["//:rules_cc-external-include-paths.patch"],
)

bazel_dep(name = "nasm", version = "2.16.03.bcr.2")
single_version_override(
    module_name = "nasm",
    patch_strip = 1,
    patches = [
        "//:nasm-musl.patch",
        "//:nasm-include.patch",
    ],
)

single_version_override(
    module_name = "libffi",
    patch_strip = 1,
    patches = ["//:libffi-aarch64-trampoline.patch"],
)

single_version_override(
    module_name = "systemd",
    patch_strip = 1,
    patches = ["//:systemd-external-include-paths.patch"],
    version = "260.1.bcr.1",
)

# Fix swift toolchains...
bazel_dep(name = "rules_swift", version = "3.5.0")
single_version_override(
    module_name = "rules_swift",
    patch_strip = 1,
    patches = ["//:0001-allow-disabling-autoconfiguration.patch"],
)

bazel_dep(name = "rules_rs", version = "0.0.0")
local_path_override(
    module_name = "rules_rs",
    path = "..",
)

# A separate bzlmod module that consumes the `@shared_hub` hub declared below
# via `crate.use_hub` (see shared_hub_child/MODULE.bazel). Exercises sharing one
# hub across modules.
bazel_dep(name = "shared_hub_child", version = "0.0.0")
local_path_override(
    module_name = "shared_hub_child",
    path = "shared_hub_child",
)

rules_rust = use_extension("@rules_rs//rs:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

rules_rust_wasm_bindgen = use_extension("@rules_rs//rs:rules_rust_wasm_bindgen.bzl", "rules_rust_wasm_bindgen")
use_repo(rules_rust_wasm_bindgen, "rules_rust_wasm_bindgen")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")

toolchains = use_extension("@rules_rs//rs/toolchains:module_extension.bzl", "toolchains")
toolchains.toolchain(
    edition = "2024",
    version = "1.92.0",
)
toolchains.experimental_miri(version = "nightly/2026-04-20")
use_repo(toolchains, "default_rust_toolchains", "miri_toolchains")

register_toolchains("@default_rust_toolchains//:all")

register_toolchains("@miri_toolchains//:all")

register_toolchains(
    "@rules_rust//extensions/prost:default_prost_toolchain",
    "@rules_rust//extensions/pyo3/toolchains:rust_toolchain",
    "@rules_rust//extensions/pyo3/toolchains:toolchain",
    "@rules_rust_wasm_bindgen//:default_wasm_bindgen_toolchain",
    "@//prost/proto_toolchain",
)

TESTS = [
    # TODO(zbarsky): Figure out how to make this work?
    # "annotation_crate_features",
    "bindgen",
    "build_script_aliases",
    "build_script_env_select",
    "build_script_runtime_env",
    "build_dep_features",
    "cfg_feature_target_dep",
    "empty_workspace",
    "feature_name_overrides_implicit_dep",
    "first_party_feature_propagation",
    "git_crates",
    "git_crates_aliased_deps",
    "git_non_workspace_root",
    "many_workspace_deps",  # Got count 45796 in 20 rounds
    "multiple_versions_for_dependency",
    "multiple_versions_of_optional_dep",
    "non_optional_dep_feature",
    "optional_build_deps",
    "platform_dep_features",
    "self_dev_dependency",
    "shared_hub",
    "target_workspace_dep_feature",
    "vendored_crate_override",
    "workspace_default_features",
    "vendored_workspace_dep",
    "workspace_member_annotation_features",
    "workspace_git_dep",
    "workspace_path_dependency",
    "workspace_hyphen_dep_aliases",
    "workspace_renamed_path_dep_aliases",
    "binaries",
    "binary_only",
    "uv",
]

[
    crate.from_cargo(
        name = test,
        cargo_lock = "//:%s/Cargo.lock" % test,
        cargo_toml = "//:%s/Cargo.toml" % test,
        # cargo_config = "//:.cargo/config.toml",
        # use_home_cargo_credentials = True,
        debug = True,
        platform_triples = [
            "aarch64-unknown-linux-gnu",
            "aarch64-apple-darwin",
            "aarch64-pc-windows-gnullvm",
            "x86_64-unknown-linux-gnu",
            "x86_64-apple-darwin",
            "x86_64-pc-windows-gnullvm",
        ],
    )
    for test in TESTS
]

[use_repo(crate, test) for test in TESTS]

# Workspace member whose Cargo.toml lives at the bazel workspace root.
crate.from_cargo(
    name = "root_package",
    cargo_lock = "//:Cargo.lock",
    cargo_toml = "//:Cargo.toml",
    debug = True,
    platform_triples = [
        "aarch64-unknown-linux-gnu",
        "aarch64-apple-darwin",
        "aarch64-pc-windows-gnullvm",
        "x86_64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "x86_64-pc-windows-gnullvm",
    ],
)
use_repo(crate, "root_package")
crate.annotation(
    crate = "rustls",
    # Test for https://github.com/bazelbuild/rules_rust/issues/3626
    crate_features = ["fips"],
    crate_features_select = {
        "x86_64-unknown-linux-gnu": ["fips"],
    },
    repositories = ["annotation_crate_features"],
    rustc_flags_select = {
        "x86_64-unknown-linux-gnu": ["--cfg=rules_rs_annotation_smoke"],
    },
)
crate.annotation(
    # Smoketest that we do something reasonable with this attribute
    build_script_env_select = {
        "aarch64-apple-darwin": '{"OS": "darwin"}',
        "x86_64-unknown-linux-musl": '{"OS": "linux"}',
    },
    crate = "bitflags",
    repositories = ["build_script_env_select"],
)
crate.annotation(
    crate = "tokenizers",
    workspace_cargo_toml = "tokenizers/Cargo.toml",
)
crate.annotation(
    allow_build_script_to_detect_nonhermetic_paths = True,
    crate = "crunchy",
    version = "0.2.4",
)
crate.annotation(
    allow_build_script_to_detect_nonhermetic_paths = True,
    crate = "av-scenechange",
    version = "0.14.1",
)
crate.annotation(
    crate = "member_foo",
    crate_features = ["json"],
    repositories = ["workspace_member_annotation_features"],
)

# Test gen_binaries
crate.annotation(
    crate = "protoc-gen-prost",
    extra_aliased_targets = {
        "protoc-gen-prost-extra": "protoc-gen-prost",
    },
    gen_binaries = ["protoc-gen-prost"],
)

# Test gen_binaries for a binary-only crate (no [lib], no src/lib.rs).
crate.annotation(
    crate = "b3sum",
    gen_binaries = ["b3sum"],
    repositories = ["binary_only"],
)

# Fix readme inclusions
crate.annotation(
    crate = "windows-link",
    patch_args = ["-p1"],
    patches = ["//:windows-link.patch"],
)
crate.annotation(
    crate = "windows-version",
    patch_args = ["-p1"],
    patches = ["//:windows-version.patch"],
)

# Workaround not parsing `members = ["crates/*"]` yet.
[
    crate.annotation(
        crate = member,
        strip_prefix = "crates/" + member,
    )
    for member in [
        "uv",
        "uv-performance-memory-allocator",
    ]
]

### Fix -sys crates
include("//:3rd_party/bzip2-sys/include.MODULE.bazel")

include("//:3rd_party/glib-sys/include.MODULE.bazel")

include("//:3rd_party/libssh2-sys/include.MODULE.bazel")

include("//:3rd_party/lzma-sys/include.MODULE.bazel")

include("//:3rd_party/libudev-sys/include.MODULE.bazel")

include("//:3rd_party/apriltag-sys/include.MODULE.bazel")

include("//:3rd_party/zstd-sys/include.MODULE.bazel")

# TODO(zbarsky): alsa-sys is not curently tested, fix it
include("//:3rd_party/alsa-sys/include.MODULE.bazel")

include("//:3rd_party/openssl-sys/include.MODULE.bazel")

single_version_override(
    module_name = "openssl",
    patch_strip = 1,
    patches = [
        "//:openssl-perl-genrule.patch",
        "//:openssl-windows-udp-netreset.patch",
    ],
)

crate.annotation(
    crate = "ring",
    patch_args = ["-p1"],
    patch_tool = "patch",
    patches = ["//:ring-aarch64-windows-v6.patch"],
    strip_prefix = "ring-0.16.20",
    version = "0.16.20",
)

bazel_dep(name = "aws-lc", version = "1.67.0")

crate.annotation(
    build_script_data = [
        "@aws-lc//:crypto",
        "@aws-lc//:ssl",
    ],
    build_script_env = {
        "AWS_LC_SYS_PREBUILT_CRYPTO": "$(rootpaths @aws-lc//:crypto)",
        "AWS_LC_SYS_PREBUILT_SSL": "$(rootpaths @aws-lc//:ssl)",
    },
    crate = "aws-lc-sys",
    patch_args = ["-p1"],
    patches = ["//:aws-lc-sys-prebuilt.patch"],
    deps = [
        "@aws-lc//:crypto",
        "@aws-lc//:ssl",
    ],
)

inject_repo(crate, "aws-lc")

include("//:3rd_party/tikv-jemalloc-sys/include.MODULE.bazel")

crate.annotation(
    allow_build_script_to_detect_nonhermetic_paths = True,
    build_script_env = {
        "NASM": "$(execpath @nasm//:nasm)",
    },
    build_script_tags = ["annotation-build-script-tag-test"],
    build_script_tools = ["@nasm//:nasm"],
    crate = "rav1e",
    patch_tool = "patch",
    patches = ["//:rav1e-nasm-0.8.1.patch"],
    tags = ["annotation-tag-test"],
    version = "0.8.1",
)

inject_repo(crate, "nasm")

crate.annotation(
    crate = "gemm-common",
    patch_args = ["-p1"],
    patches = ["//:gemm-common-fp16.patch"],
)

include("//:3rd_party/gdk-pixbuf-sys/include.MODULE.bazel")

include("//:3rd_party/cairo-sys-rs/include.MODULE.bazel")

include("//:3rd_party/atk-sys/include.MODULE.bazel")

crate.annotation(
    crate = "khronos_api",
    patches = ["//:khronos_api.patch"],
)

bazel_dep(name = "mimalloc", version = "2.2.4.bcr.1")

"""
ERROR: /Users/dzbarsky/Library/Caches/bazel/_bazel_dzbarsky/16a3c4547ef278628dec1184581db8ea/external/mimalloc+/BUILD.bazel:77:18: Linking external/mimalloc+/libmimalloc-override.so failed: (Exit 1): clang++ failed: error executing CppLink command (from cc_shared_library rule target @@mimalloc+//:mimalloc-override) external/llvm++http_archive+llvm-toolchain-minimal-21.1.8-linux-amd64/bin/clang++ -target aarch64-w64-windows-gnu '--sysroot=/dev/null' '--unwindlib=none' -nostdlib++ ... (remaining 52 arguments skipped)
clang++: error: no such file or directory: 'psapi.lib'
clang++: error: no such file or directory: 'shell32.lib'
clang++: error: no such file or directory: 'user32.lib'
clang++: error: no such file or directory: 'advapi32.lib'
clang++: error: no such file or directory: 'bcrypt.lib'
"""
#crate.annotation(
#    crate = "libmimalloc-sys",
#    gen_build_script = "off",
#    deps = ["@mimalloc"],
#)

inject_repo(crate, "mimalloc")

include("//:3rd_party/libz-sys/include.MODULE.bazel")

include("//:3rd_party/libgit2-sys/include.MODULE.bazel")

include("//:3rd_party/coreaudio-sys/include.MODULE.bazel")

# TODO(zbarsky): fix this for realz
crate.annotation(
    crate = "pango-sys",
    gen_build_script = "off",
)
crate.annotation(
    crate = "gdk-sys",
    gen_build_script = "off",
)
crate.annotation(
    crate = "gdkx11-sys",
    gen_build_script = "off",
)
crate.annotation(
    crate = "gtk-sys",
    gen_build_script = "off",
)
