load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_setting")
load("@rules_rust//rust:defs.bzl", "rust_stdlib_filegroup")
load(":all_crate_deps_test.bzl", "all_crate_deps_tests")
load(":cargo_workspace_graph_test.bzl", "cargo_workspace_graph_tests")
load(":cfg_parser_test.bzl", "cfg_parser_tests")
load(":lint_flags_test.bzl", "lint_flags_tests")
load(":semver_test.bzl", "semver_select_tests")

bool_setting(
    name = "source_stdlib_building",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

rust_stdlib_filegroup(
    name = "empty_stdlib",
    srcs = [],
    visibility = ["//visibility:public"],
)

all_crate_deps_tests()

cargo_workspace_graph_tests()

cfg_parser_tests()

lint_flags_tests()

semver_select_tests()

bzl_library(
    name = "all_crate_deps",
    srcs = ["all_crate_deps.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [":select_utils"],
)

bzl_library(
    name = "cargo_credentials",
    srcs = ["cargo_credentials.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        ":toml2json",
        "@bazel_lib//lib:repo_utils",
    ],
)

bzl_library(
    name = "git_crate_metadata_repository",
    srcs = ["git_crate_metadata_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        ":repository_utils",
    ],
)

bzl_library(
    name = "crate_repository",
    srcs = ["crate_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        ":cargo_credentials",
        ":registry_utils",
        ":repository_utils",
        ":toml2json",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "downloader",
    srcs = ["downloader.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        ":annotations",
        ":cargo_credentials",
        ":registry_utils",
        ":toml2json",
        "@bazel_tools//tools/build_defs/repo:git_worker.bzl",
    ],
)

bzl_library(
    name = "cargo_workspace_graph",
    srcs = ["cargo_workspace_graph.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        ":cfg_parser",
        ":resolver",
        ":select_utils",
        ":semver",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "registry_config_repository",
    srcs = ["registry_config_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [":cargo_credentials"],
)

bzl_library(
    name = "registry_utils",
    srcs = ["registry_utils.bzl"],
    visibility = ["//rs:__subpackages__"],
)

bzl_library(
    name = "repository_utils",
    srcs = ["repository_utils.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        ":select_utils",
        ":semver",
    ],
)

bzl_library(
    name = "toml2json",
    srcs = ["toml2json.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = ["@bazel_lib//lib:repo_utils"],
)

bzl_library(
    name = "source_stdlib",
    srcs = ["source_stdlib.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = ["@rules_rust//rust:bzl_lib"],
)

bzl_library(
    name = "git_cargo_workspace_repository",
    srcs = ["git_cargo_workspace_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        ":repository_utils",
        ":toml2json",
        "@bazel_tools//tools/build_defs/repo:git_worker.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "cargo_repository",
    srcs = ["cargo_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "@rules_rust//rust/platform:bzl_lib",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "clippy_repository",
    srcs = ["clippy_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "//rs/private:rust_repository_utils",
        "@rules_rust//rust/platform:bzl_lib",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "rustfmt_repository",
    srcs = ["rustfmt_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "//rs/private:rust_repository_utils",
        "@rules_rust//rust/platform:bzl_lib",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "rust_analyzer_repository",
    srcs = ["rust_analyzer_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "//rs/private:rust_repository_utils",
        "@rules_rust//rust/platform:bzl_lib",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "rust_src_repository",
    srcs = ["rust_src_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "rustc_src_repository",
    srcs = ["rustc_src_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        ":cargo_workspace_graph",
        ":repository_utils",
        ":toml2json",
        "//rs/platforms:triples",
        "@bazel_skylib//lib:paths",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "rustc_repository",
    srcs = ["rustc_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "//rs/private:rust_repository_utils",
        "@rules_rust//rust/platform:bzl_lib",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "stdlib_repository",
    srcs = ["stdlib_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "//rs/private:rust_repository_utils",
        "@rules_rust//rust/platform:bzl_lib",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "toolchains_repository",
    srcs = ["toolchains_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "//rs/toolchains:declare_rust_analyzer_toolchains",
        "//rs/toolchains:declare_rustc_toolchains",
        "//rs/toolchains:declare_rustfmt_toolchains",
    ],
)

bzl_library(
    name = "rust_repository_utils",
    srcs = ["rust_repository_utils.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
        "@rules_rust//rust/private:bzl_lib",
    ],
)

bzl_library(
    name = "cargo_lints",
    srcs = ["cargo_lints.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = ["@rules_rust//rust/private:bzl_lib"],
)

bzl_library(
    name = "resolver",
    srcs = ["resolver.bzl"],
    visibility = ["//rs:__subpackages__"],
    deps = [":cfg_parser"],
)

bzl_library(
    name = "annotations",
    srcs = ["annotations.bzl"],
    visibility = ["//rs:__subpackages__"],
)

bzl_library(
    name = "cfg_parser",
    srcs = ["cfg_parser.bzl"],
    visibility = ["//rs:__subpackages__"],
)

bzl_library(
    name = "host_tools_repository",
    srcs = ["host_tools_repository.bzl"],
    visibility = ["//rs:__subpackages__"],
)

bzl_library(
    name = "lint_flags",
    srcs = ["lint_flags.bzl"],
    visibility = ["//rs:__subpackages__"],
)

bzl_library(
    name = "select_utils",
    srcs = ["select_utils.bzl"],
    visibility = ["//rs:__subpackages__"],
)

bzl_library(
    name = "semver",
    srcs = ["semver.bzl"],
    visibility = ["//rs:__subpackages__"],
)
